// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add Prettier 1`] = `
Object {
  "/.prettierrc": "{
  \\"singleQuote\\": true,
  \\"trailingComma\\": \\"es5\\",
  \\"useTabs\\": true,
  \\"overrides\\": [
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 70,
        \\"useTabs\\": false,
        \\"trailingComma\\": \\"none\\",
        \\"proseWrap\\": \\"never\\"
      }
    }
  ]
}",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"test\\": \\"jest\\",
    \\"format\\": \\"prettier --write '**/*.{js,css,md}'\\",
    \\"posttest\\": \\"npm run format\\"
  }
}",
}
`;

exports[`should infer options from EditorConfig 1`] = `
"{
  \\"singleQuote\\": true,
  \\"trailingComma\\": \\"es5\\",
  \\"overrides\\": [
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 70,
        \\"useTabs\\": false,
        \\"trailingComma\\": \\"none\\",
        \\"proseWrap\\": \\"never\\"
      }
    }
  ]
}"
`;

exports[`should keep a custom pattern defined in a package.json script 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"format\\": \\"prettier --write '**/*.{xxx,yyy}'\\",
    \\"test\\": \\"jest\\",
    \\"posttest\\": \\"npm run format\\"
  }
}"
`;

exports[`should use a custom options 1`] = `
"{
  \\"singleQuote\\": true,
  \\"trailingComma\\": \\"es5\\",
  \\"useTabs\\": true,
  \\"printWidth\\": 333,
  \\"overrides\\": [
    {
      \\"files\\": \\"*.md\\",
      \\"options\\": {
        \\"printWidth\\": 70,
        \\"useTabs\\": false,
        \\"trailingComma\\": \\"none\\",
        \\"proseWrap\\": \\"never\\"
      }
    }
  ]
}"
`;
